fix(hero): wrap <Button/> in wrapper and fix position. feat(button): style full component

--- a/src/Hero/hero.module.css
+++ b/src/Hero/hero.module.css
@@ -5,10 +5,11 @@
     position: relative;
 }
 
-img{
+.img{
     max-width: 100%;
     height: auto;
     object-fit: cover;    
+    display: block;
 }
 
 h2{
@@ -24,4 +25,12 @@ h2{
     border-radius: 10px;
     padding: 0.25em 0.5em .25em .2em;
     backdrop-filter: blur(6px);
+}
+
+.cta {
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    transform: translateX(-50%);
+    z-index: 100;
 }
